--- a/index.html
+++ b/index.html
@@ -4,18 +4,45 @@
 <head>
     <meta charset="utf-8">
     <title>Planta de Cidade em Three.js</title>
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
+    <header class="rounded-pill" id="progressBar">
+        <div>icon</div>
+        <div>1/100</div>
+        <div>icon</div>
+        <div>10</div>
+        <div>icon</div>
+        <div>10</div>
+        <div>
+            Progresso
+        </div>
+        <div>icon</div>
+        <div>icon</div>
+        <div>200k</div>
+        <div>icon</div>
+        <div>10k</div>
+        <div>icon</div>
+        <div>200</div>
+    </header>
+    <main class="rounded-pill">
+        <div>
+            <img class="rounded-pill" src="./img/person.png" alt="Image person">
+        </div>
+        <div class="mt-3">5º</div>
+        <div class="mt-2">Nivel: 3</div>
+        <div>Menssagens</div>
+        <div>Avisos</div>
+        <div>Clã</div>
+    </main>
+    <section id="actions">
+        <div>Construir</div>
+        <div>Pesquisa</div>
+        <div>Ranking</div>
+    </section>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <script src="https://unpkg.com/three@0.87.1/build/three.js"></script>
     <script src="https://unpkg.com/three@0.87.1/examples/js/controls/OrbitControls.js"></script>
@@ -28,6 +55,7 @@
     <script src="./js/increaseValueWithScroll.js"></script>
     <script src="./js/createBuildings.js"></script>
     <script src="./js/clicks.js"></script>
+    <script src="./js/createText.js"></script>
 </body>
 
 </html>
