--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header class="rounded-pill" id="progressBar">
+    <!-- <header class="rounded-pill" id="progressBar">
         <div>icon</div>
         <div>1/100</div>
         <div>icon</div>
@@ -40,7 +40,7 @@
         <div>Construir</div>
         <div>Pesquisa</div>
         <div>Ranking</div>
-    </section>
+    </section> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
@@ -50,6 +50,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
 
     <script src="./js/config.js"></script>
+    <script src="./js/detectCollision.js"></script>
     <script src="./js/createMatriz.js"></script>
     <script src="./js/createImage.js"></script>
     <script src="./js/increaseValueWithScroll.js"></script>
