criando evento de mouseMove

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
 
     <script src="./js/config.js"></script>
+    <script src="./js/mouseMove.js"></script>
     <script src="./js/detectCollision.js"></script>
     <script src="./js/createMatriz.js"></script>
     <script src="./js/createImage.js"></script>
