--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
 
     <script src="./js/config.js"></script>
-    <script src="./js/mouseMove.js"></script>
-    <script src="./js/detectCollision.js"></script>
     <script src="./js/createMatriz.js"></script>
     <script src="./js/createImage.js"></script>
     <script src="./js/increaseValueWithScroll.js"></script>
     <script src="./js/createBuildings.js"></script>
-    <script src="./js/clicks.js"></script>
-    <script src="./js/createText.js"></script>
+    <script src="./js/detectCollision.js"></script>
+    <script src="./js/mouseMove.js"></script>
+    <script src="./js/clickElement.js"></script>
 </body>
 
 </html>
