criando imagem mais bem posicionada

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
 
     <script src="./js/config.js"></script>
-    <script src="./js/createMatriz.js"></script>
+    <script src="./js/createLighting.js"></script>
     <script src="./js/createImage.js"></script>
     <script src="./js/increaseValueWithScroll.js"></script>
     <script src="./js/createBuildings.js"></script>
