agrupando elemento, setando camera para posição inicial, e criando elemento de botão

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script src="./js/createBuildings.js"></script>
     <script src="./js/detectCollision.js"></script>
     <script src="./js/mouseMove.js"></script>
-    <script src="./js/clickElement.js"></script>
+    <script src="./js/button.js"></script>
 </body>
 
 </html>
