--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="./js/createImage.js"></script>
     <script src="./js/increaseValueWithScroll.js"></script>
     <script src="./js/createBuildings.js"></script>
+    <script src="./js/rulebuildingsReleased.js"></script>
     <script src="./js/detectCollision.js"></script>
     <script src="./js/mouseMove.js"></script>
     <script src="./js/button.js"></script>
